# Alcia2.0

./: ..gitignore.un~  .clang-format  .clang-tidy  .clangd  .cmake-format.py  .codespell.toml  .editorconfig  .gdbinit  .gitattributes  .gitignore  .gitignore~  .gitlint  .lldbinit  .pre-commit-config.yaml  Alcia 2.0.aps  Alcia 2.0.sln  Alcia 2.0.vcxproj  Alcia 2.0.vcxproj.filters  BaseMonster.cpp  BaseMonster.h  CMakeLists.txt  CMakePresets.json  CTestCustom.cmake  Character.cpp  Character.h  Hero.cpp  Hero.h  LICENSE  Makefile  MonsterFactory.cpp  MonsterFactory.h  README.md  SECURITY.md  Story.cpp  Story.h  conanfile.py  main.cpp  requirements.txt  resource.h
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _setup.yml  benchmark.yml  cdash.yml  ci.yml  codeql.yml  codequality.yml  coverage.yml  docs.yml  labeler.yml  pr-title.yml  release.yml  size.yml  spelling.yml  stale.yml  valgrind.yml
Alcia 2.0/x64/Debug/: Alcia 2.0.exe.recipe  vc143.idb
Alcia 2.0/x64/Debug/Alcia 2.0.tlog/: Alcia 2.0.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Alcia 2.0/x64/Debug/Alcia 2.0_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
Alcia 2.0/x64/Debug/microsoft/STL/: std.compat.ixx.ifc  std.compat.ixx.ifc.d.json  std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.module.json  std.ixx.ifc.dt.module.json.command  std.ixx.module.json
cmake/: Benchmark.cmake  Ccache.cmake  ClangTidy.cmake  CompileOptions.cmake  CompilerWarnings.cmake  ConanProvider.cmake  Coverage.cmake  Doxygen.cmake  Hardening.cmake  Iwyu.cmake  LicenseHeader.cmake  Packaging.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
docs/doxygen/: Doxyfile.in  custom.css  footer.html  header.html
include/Alcia/core/: Engine.hpp
include/Alcia/game/: CommandParser.hpp  Player.hpp  World.hpp
include/Alcia/ui/: ConsoleRenderer.hpp
scripts/: add_license_header.py  bench.sh  build.sh  changelog.sh  fetch_doxygen_awesome.sh  lint.sh  new_class.sh  patch_doxygen_header.py  run.sh  setup.sh  watch.sh
src/: CMakeLists.txt  main.cpp
src/core/: Engine.cpp
src/game/: CommandParser.cpp  Player.cpp  World.cpp
src/ui/: ConsoleRenderer.cpp
tests/: CMakeLists.txt
tests/bench/: bench_CommandParser.cpp
tests/fuzz/: fuzz_CommandParser.cpp
tests/integration/: test_EngineIntegration.cpp
tests/unit/: test_CommandParser.cpp  test_Player.cpp  test_World.cpp
